feat: enhance worker states with createdAt field and refactor repository methods to handle undefined state pairs correctly

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,8 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "always",
     "source.fixAll.tslint": "always",
-    "source.fixAll.stylelint": "always"
+    "source.fixAll.stylelint": "always",
+    "source.organizeImports": "always"
   },
   "eslint.enable": true,
   "eslint.workingDirectories": [{ "mode": "auto" }],
